--- a/LanNhat.html
+++ b/LanNhat.html
@@ -31,7 +31,7 @@
 	<div class="container-fluid">
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				 <img src="file:///D|/bootstrap/Lan-Nhat/trời đêm.jpg" height="600" width="100%">
+				 <img src="images/trời đêm.jpg" height="600" width="100%">
 				<div class="carousel-caption mb-5">
 		<h2 class="text-center"> Build a landing page for your business or project and generate more leads!</h2>
 		<div class="row">
