--- a/LanNhat.html
+++ b/LanNhat.html
@@ -4,6 +4,9 @@
 <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Untitled Document</title>
+<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>This is a WebPage using Bootstrap 4</title>
 	<!-- Import Boostrap css, js, font awesome here -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 	<link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
@@ -12,15 +15,17 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js">
 	</script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-	<link href="file:///D|/bootstrap/css/style.css" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body>
+		<div class="jumbotron">
 	  <div class="container-fluid">
 		  <div class="row">
 			  <div class="col-1"></div>
 			  <div class="col-md-3 col-3">
-				  <p2 class="text- center">ID Nhật Lan</p2>
+				  <h3 class="text- center">ID Nhật Lan</h3>
 				   </div>
 			  <div class="col-6"></div>
 			<div class="col-1">
@@ -28,12 +33,13 @@
 			  </div>
 		  </div>
 		  </div>
-	<div class="container-fluid">
+	<div class="container-fluid mt-3">
 		<div class="carousel-inner">
 			<div class="carousel-item active">
 				 <img src="images/trời đêm.jpg" height="600" width="100%">
 				<div class="carousel-caption mb-5">
-		<h2 class="text-center"> Build a landing page for your business or project and generate more leads!</h2>
+		<h2 class="text-center"> Build a landing page for your business or project and generate more leads!
+				</h2>
 		<div class="row">
 			<div class="col-2"></div>
 			<div class="col-4 col-md-7">
@@ -48,11 +54,143 @@
 		</div> 
 			</div>
 	<div class="container-fluid padding">
-		<div class="row text-center">
-			<div class="col-4">
-				<i class="icon-screen-desktop"></i>
+		<div class="row text-center mt-5">
+			<div class="col-md-4 col-4 ">
+				<i class="fa fa-desktop text-success m-auto fa-5x" aria-hidden="true"></i>
+				<h3>Fully Responsive</h3>
+				<p>This theme will look great on any device, no matter the size!</p>
+				</div>
+				<div class="col-md-4 col-4">
+				<i class="fa fa-beer text-success fa-5x" aria-hidden="true"></i>
+					<h3> Bootstrap 4 Ready</h3>
+					<p>Featuring the latest build of the new Bootstrap 4 framework!</p>
+					</div>	
+				<div class="col-md-4 col-4">
+					<i class="fa fa-check text-success fa-5x" aria-hidden="true"></i>
+					<h3> Easy to Use</h3>
+					<p>Ready to use with your own content, or customize the source files!</p>
+				</div>
 			</div>
 		</div>
+	</div>
+<div class="container-fluid">
+				<div class="row">
+				<div class="col-6 p-5">
+				 <h3>Fully Responsive Design</h3>
+				<p>When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively! When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
+				</div>
+					<div class="col-6">
+				<img src="images/bg-showcase-1.jpg" height="405">
+				</div>
+				</div>
+				<div class="container-fluid padding">
+		   <div class="row">
+			   <div class="col-6">
+				   <img src="images/bg-showcase-2.jpg" height="405">
+			   </div>
+				   <div class="col-6 p-5 mt-5">
+					   <h3>Updated For Bootstrap 4</h3>
+					   <p>Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
+				   </div>
+				</div>
+				</div>
+				<div class="row">
+				<div class="col-6 p-5 mt-5">
+				 <h3>Easy to Use &amp; Customize</h3>
+				<p>Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
+				</div>
+					<div class="col-6">
+				<img src="images/bg-showcase-3.jpg" height="405">
+				</div>
+				</div>
+					</div>
+	<div class="jumbotron">
+		<div class="container-fluid text-center mb-5">
+			<h2>What people are saying...</h2></div>
+			<div class="row text-center mb-5">
+				<div class="col-4">
+					<img src="images/testimonials-1.jpg" class="rounded-circle" height="200">
+					<h4>Margaret E.</h4>
+					<p>This is fantastic! Thanks so much guys!</p>
+				</div>
+				<div class="col-4">
+					<img src="images/testimonials-2.jpg" class="rounded-circle" height="200">
+					<h4>Fred S.</h4>
+					<p>Bootstrap is amazing. I've been using it to create lots of super nice landing pages.</p>
+				</div>
+				<div class="col-4">
+					<img src="images/testimonials-3.jpg" class="rounded-circle" height="200">
+					<h4>Sarah W.</h4>
+					<p>Thanks so much for making these free resources available to us!</p>
+				</div>
+			</div>
+		<div class="container-fluid">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				 <img src="images/trời đêm.jpg" height="300" width="100%">
+				<div class="carousel-caption mb-5">
+		<h2 class="text-center"> Ready to get started? Sign up now!</h2>
+		<div class="row">
+			<div class="col-2"></div>
+			<div class="col-4 col-md-7">
+				<input class="form-control" type="email" id=" inputEmail" placeholder="Enter your email">
+			</div>
+			<div class="col-1">
+				<button class="btn btn-success">Sign up</button>
+			</div>
+		</div>
+	</div>
+			</div>
+		</div> 
+			</div>
+		<div>
+				
+		</div>
+		<footer>
+			<div class="container-fluid">
+					<div class="row mt-5">
+						<div class="col-0 text-center col-md-6">
+							<ul class="nav">
+								<li class="nav-item">
+								<a class="nav-link" href="#">About</a>
+								</li>.
+										<li  class="nav-item">
+								<a class="nav-link" href="#">Contact</a>
+								</li>.
+										<li class="nav-item">
+								<a class="nav-link" href="#">Terms of Use</a>
+								</li>.
+										<li class="nav-item">
+								<a class="nav-link" href="#">Privacy Policy</a>
+								</li>
+							</ul>
+						</div>
+						<div class="col-6 col-md-3"></div>
+						
+						<div class="col-9 col-md-3 text-center">
+							<ul class="nav">
+								<li class="nav-item">
+									<a class="nav-link" href="#">
+										<i class="fab fa-facebook fa-3x"></i> 
+									</a>
+								</li>
+								<li>
+									<a class="nav-link" href="#"> 
+											<i class="fab fa-instagram fa-3x"></i>
+									</a>
+								</li>
+								<li>
+									<a  class="nav-link" href="#">
+										<i class="fab fa-twitter-square fa-3x"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+						</div>
+				<p class="text-muted small mb-4 mb-lg-0">&copy; By Nhật Lan/ D1908G1</p>
+				</div>
+			
+			</footer>
 	</div>
 	</body>
 </html>
