--- a/LanNhat.html
+++ b/LanNhat.html
@@ -33,11 +33,11 @@
 			  </div>
 		  </div>
 		  </div>
-	<div class="container-fluid mt-3">
+	<div class="container-fluid mt-3 mb-5">
 		<div class="carousel-inner">
 			<div class="carousel-item active">
 				 <img src="images/trời đêm.jpg" height="600" width="100%">
-				<div class="carousel-caption mb-5">
+				<div class="carousel-caption">
 		<h2 class="text-center"> Build a landing page for your business or project and generate more leads!
 				</h2>
 		<div class="row">
@@ -46,7 +46,7 @@
 				<input class="form-control" type="email" id="inputEmail" placeholder="Enter your email">
 			</div>
 			<div class="col-1">
-				<button class="btn btn-success">Sign up</button>
+				<button class="btn btn-success mb-5">Sign up</button>
 			</div>
 		</div>
 	</div>
