trời có mưa rào nhẹ

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 	<link href="style.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <style>
 		#mybtn{
 	        display: none; position: fixed;
@@ -21,7 +22,7 @@
  			z-index: 150;
 			bottom:30px;
 		    background-color: darkgreen;
-			width: 40px; height: 40px;
+			width: 40px; height: 40px;}
 			
 	</style>
 </head>
@@ -45,8 +46,8 @@
 		<div class="carousel-inner">
 			<div class="casel-item active">
 				 <img src="images/trời đêm.jpg" height="600" width="100%">
-			  <div class="carousel-caption">
-		<h2 class="text-center"> Build a landing page for your business or project and generate more leads!
+			  <div class="carousel-caption" >
+		<h2 class="text-center" > Build a landing page for your business or project and generate more leads!
 				</h2>
 		<div class="row">
 			<div class="col-2"></div>
@@ -73,7 +74,7 @@
 			</div>
 		</div> 
 			</div>
-	<div class="container-fluid padding">
+	<div class="container-fluid">
 		<div class="row text-center mt-5">
 			<div class="col-md-4 col-4 ">
 				<i class="fa fa-desktop text-success m-auto fa-5x" aria-hidden="true"></i>
