--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div class="container-fluid mt-3 mb-5">
 		<div class="carousel-inner">
 			<div class="casel-item active">
-				 <img src="images/trời đêm.jpg" height="600" width="100%">
-			  <div class="carousel-caption" >
+				<img src="images/trời đêm.jpg" height="600" width="100%">
+			  <div class="carousel-caption" data-aos="zoom-out-down">
 		<h2 class="text-center" > Build a landing page for your business or project and generate more leads!
 				</h2>
 		<div class="row">
@@ -106,10 +106,10 @@
 				</div>
 				<div class="container-fluid padding">
 		   <div class="row">
-			   <div class="col-6">
+			   <div class="col-6" data-aos="fade-right">
 				   <img src="images/bg-showcase-2.jpg" height="410">
 			   </div>
-				   <div class="col-6 p-5 mt-5">
+				   <div class="col-6 p-5 mt-5" data-aos="fade-left">
 					   <h3>Updated For Bootstrap 4</h3>
 					   <p>Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
 				   </div>
@@ -126,7 +126,8 @@
 				</div>
 					</div>
 	<div class="jumbotron">
-		<div class="container-fluid text-center mb-5">
+		<div class="container-fluid text-center mb-5" data-aos="fade-up"
+     data-aos-anchor-placement="center-center">
 			<h2>What people are saying...</h2></div>
 			<div class="row text-center mb-5">
 				<div class="col-4">
@@ -232,6 +233,10 @@ function topFunction() {
   document.documentElement.scrollTop = 0;
 }
 		</script>
+		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+		<script>
+  AOS.init();
+</script>
 	</div>
 	</body>
 </html>
