--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div class="row">
 			<div class="col-2"></div>
 			<div class="col-4 col-md-7">
-				<input class="form-control" type="email" id="inputEmail" placeholder="Enter your email">
+				<input class="form-control" type="Email" id="inputEmail" placeholder="Enter your email">
 			</div>
 			<div class="col-1">
 				<button class="btn btn-success mb-5">Sign up</button>
