--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="header">
 		<div class="container">
-			<div class="logo"><a href="#">PiPi</a></div>
+			<div class="logo"><a href="#">PINK</a></div>
 			<div class="contact-info">
 				<ul>
 					<li>
